gsm: Enforce disable-user-switching lockdown setting

This part of https://bugzilla.gnome.org/show_bug.cgi?id=598255 but this
does not cover the UI yet.